ast编译通过